fix Firefox UI scrollbar

--- a/webplugin/css/app/km-sidebox.css
+++ b/webplugin/css/app/km-sidebox.css
@@ -74,10 +74,8 @@
     box-sizing: border-box;
     cursor: text;
     line-height: 1.42;
-    height: 100%;
+    height: auto;
     outline: none;
-    /* overflow-y: auto; */
-    /* padding: 12px 15px; */
     tab-size: 4;
     -moz-tab-size: 4;
     text-align: left;
