--- a/webplugin/css/app/mck-sidebox-1.0.css
+++ b/webplugin/css/app/mck-sidebox-1.0.css
@@ -1563,12 +1563,10 @@
 }
 
 .mck-box-body .mck-tab-cell {
-	position: relative;
-	/* display: table; */
+	position: absolute;
 	width: 100%;
 	height: 100%;
-	overflow-x: hidden;
-	overflow-y: auto;
+	overflow: hidden auto;
 	-webkit-overflow-scrolling: touch;
 }
 #mck-message-cell .li {
@@ -1588,6 +1586,7 @@
 	bottom: 0px;
 	left: 0;
 	overflow: auto;
+	scrollbar-width: thin;
 	-webkit-overflow-scrolling: touch;
 }
 .mck-box-body .mck-message-inner:focus {
@@ -4244,20 +4243,16 @@ display: none;
     overflow: auto;
 }
 .km-faqanswerscroll{
-	overflow-y: auto;
+	overflow: hidden auto;
+	scrollbar-width: thin;
 	height: 100%;
-	top: 0;
-	left: 0;
-	bottom: 0;
-	right: 0;
-	/* position: absolute; */
-	width: 102%;
+	width: 100%;
 }
 
-#km-faqanswer{
+/* #km-faqanswer{
 	overflow-y: scroll;
 	overflow-x: hidden;
-}
+} */
 .km-visibility-hidden {
 	visibility: hidden !important;
 }
